--- a/index.html
+++ b/index.html
@@ -40,13 +40,13 @@
                             <label>
                                 Username or email address
                             </label>
-                            <input type="email" name="username" id="username" placeholder="e.g. john@doe.com" required>
+                            <input class="c-input" type="email" name="username" id="username" placeholder="e.g. john@doe.com" required>
                         </p>
                         <p class="c-form-field">
                             <label>
                                 Password
                             </label>
-                            <input type="password" name="password" id="password" required>
+                            <input class="c-input" type="password" name="password" id="password" required>
                         </p>
                         <p class="c-form-field">
                             <input type="checkbox" name="rememberme" id="rememberme">
