--- a/index.html
+++ b/index.html
@@ -37,20 +37,20 @@
                     </div>
                     <div class="c-card__body">
                         <p class="c-form-field">
-                            <label>
+                            <label for="username">
                                 Username or email address
                             </label>
                             <input class="c-input" type="email" name="username" id="username" placeholder="e.g. john@doe.com" required>
                         </p>
                         <p class="c-form-field">
-                            <label>
+                            <label for="password">
                                 Password
                             </label>
                             <input class="c-input" type="password" name="password" id="password" required>
                         </p>
                         <p class="c-form-field">
                             <input type="checkbox" name="rememberme" id="rememberme">
-                            <label>
+                            <label for="rememberme">
                                 Remember me
                             </label>
                         </p>
