Design input fields

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                             <input class="c-input" type="password" name="password" id="password" required>
                         </p>
                         <p class="c-form-field">
-                            <input type="checkbox" name="rememberme" id="rememberme">
+                            <input class="form-field--option" type="checkbox" name="rememberme" id="rememberme">
                             <label for="rememberme">
                                 Remember me
                             </label>
