--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                             </label>
                         </p>
                         <p>
-                            <input type="submit" value="Sign in"/input>
+                            <input class="o-button-reset c-button" type="submit" value="Sign in"/input>
                         </p>
                         <p>
                             <a href="#!">
