--- a/index.html
+++ b/index.html
@@ -55,10 +55,10 @@
                             </label>
                         </p>
                         <p>
-                            <input class="o-button-reset c-button" type="submit" value="Sign in"/input>
+                            <input class="o-button-reset c-button" type="submit" value="Sign in"></input>
                         </p>
                         <p>
-                            <a href="#!">
+                            <a href="#!" class="c-forgot">
                                 Forgot password?
                             </a>
                         </p>
